@@ -1,0 +1,19 @@
+(* ****** ****** *)
+
+%{#
+#define FUSE_USE_VERSION 26
+#include "prelude/CATS/array.cats"
+#include "prelude/CATS/char.cats"
+#include "prelude/CATS/integer.cats"
+#include "prelude/CATS/pointer.cats"
+#include "prelude/CATS/sizetype.cats"
+#include "prelude/CATS/string.cats"
+%}
+
+(* ****** ****** *)
+
+#define ATS_STALOADFLAG 0 // no need for staloading at run-time
+
+(* ****** ****** *)
+
+(* end of [myheader.sats] *)
