@@ -24,6 +24,7 @@ ats-lang-anairiats-0.2.2:
 17. Adding libc/sys/statvfs, which corresponds to sys/statvfs.h
 18. Adding libc/ctype, which corresponds to ctype
 19. Adding libc/DATS/stdio.dats
+20. Modifying the types for malloc_ngc and free_ngc
 
 ########################################################################
 
